--- a/phase02/task31.html
+++ b/phase02/task31.html
@@ -24,14 +24,14 @@
     #city{
         width:150px;
     }
-    .employment{
+    #employment{
         width:500px;
         height:30px;
         border:2px solid #ccc;
         border-radius: 7px;
         margin-left: 20px; 
     }
-    select:focus,.employment:focus{
+    select:focus,#employment:focus{
         outline: none;
         border:2px solid #7dace9;
         border-radius: 7px;
@@ -65,7 +65,7 @@
         </select>
     </div>
     <div id="outSchool">
-        就业单位<input type="text" class="employment">
+        <label for="employment">就业单位</label><input type="text" id="employment">
     </div>
 </form>
 
