--- a/phase02/task14-2.html
+++ b/phase02/task14-2.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>IFE JavaScript Task 01</title>
+    <title>IFE Task 14-2——零基础JavaScript编码（二）</title>
   </head>
 <body>
 <h3>污染城市列表</h3>
@@ -28,7 +28,7 @@ var aqiData = [
   将空气质量指数大于60的城市显示到aqi-list的列表中
   */
 
-//使用了array.filter、array.sort，使用了array.forEach方法来代替for循环遍历处理数组元素， 最后用element.innerHTML属性一次性改变元素的DOM结构
+//使用了array.forEach方法来代替for循环遍历处理数组元素， 最后用element.innerHTML属性一次性改变元素的DOM结构
 var content= " ";
 var chinese=["一","二","三","四","五","六"];
 aqiData.filter(function(element){return element[1]>60;})  //array.filter()方法筛选出大于60的数据
@@ -39,7 +39,6 @@ aqiData.filter(function(element){return element[1]>60;})  //array.filter()方法
 
 document.getElementById("aqi-list").innerHTML=content;  //通过innerHTML属性改变aqi-list列表中的内容
 })();
-
 
 
 //由于filter本身就对数组进行了循环，所以可以不使用forEach（）方法，同时先sort排序可以省去缓存一个新数组的步骤 ，改进后的代码如下：
