--- a/phase02/task37.html
+++ b/phase02/task37.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>IFE JavaScript Task 37</title>
+    <title>IFE Task 37——UI组件之浮出层</title>
     <style>
       #cover{
         display: none;
