--- a/phase02/task34-2.html
+++ b/phase02/task34-2.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>IFE JavaScript Task 34</title>
+    <title>IFE Task 34——听指令的小方块（二）</title>
     <style>
     table{
     	border-spacing: 0;
