--- a/phase02/task15.html
+++ b/phase02/task15.html
@@ -2,10 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8 gb2312">
-    <title>IFE JavaScript Task 01</title>
+    <title>IFE Task 15——零基础JavaScript编码（三）</title>
   </head>
 <body>
-
   <ul id="source">
     <li>北京空气质量：<b>90</b></li>
     <li>上海空气质量：<b>70</b></li>
@@ -15,20 +14,15 @@
     <li>福州空气质量：<b>32</b></li>
     <li>成都空气质量：<b>90</b></li>
   </ul>
-
   <ul id="resort">
     <!-- 
     <li>第一名：北京空气质量：<b>90</b></li>
     <li>第二名：北京空气质量：<b>90</b></li>
     <li>第三名：北京空气质量：<b>90</b></li>
      -->
-
   </ul>
-
   <button id="sort-btn">排序</button>
-
 <script type="text/javascript">
-
 var data=[]; 
 var chinese=["一","二","三","四","五","六","七"];
 var content=" ";
@@ -46,9 +40,7 @@ function getData() {
   } /*使用了substring()方法截取字符串的前两个字，即城市名，如果存在城市名不是两个字，那么这个方法就不行了，因此可以用name[i].innerHTML.split("空气")[0]截取城市名(split()方法把字符串分割为字符串数组)*/
   return data;
 }
-
-
-/**
+ /**
  * sortAqiData
  * 按空气质量对data进行从小到大的排序
  * 返回一个排序后的数组
@@ -59,8 +51,6 @@ function sortAqiData(data) {
 })
 return data;
 }
-
-
 /**
  * render
  * 将排好序的城市及空气质量指数，输出显示到id位resort的列表中
@@ -72,20 +62,17 @@ function render(data) {
   }
 document.getElementById("resort").innerHTML=content;
 }
-
+  
 function btnHandle() {
   var aqiData = getData();
   aqiData = sortAqiData(aqiData);
   render(aqiData);
 }
-
-
 function init() {
 // 在这下面给sort-btn绑定一个点击事件，点击时触发btnHandle函数
    document.getElementById("sort-btn").addEventListener("click",btnHandle);
 }
 init();
-
 </script>
 </body>
 </html>
