--- a/phase02/task15.html
+++ b/phase02/task15.html
@@ -1,7 +1,7 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8 gb2312">
+    <meta charset="UTF-8">
     <title>IFE Task 15——零基础JavaScript编码（三）</title>
   </head>
 <body>
@@ -22,10 +22,9 @@
      -->
   </ul>
   <button id="sort-btn">排序</button>
-<script type="text/javascript">
+ <script type="text/javascript">
 var data=[]; 
 var chinese=["一","二","三","四","五","六","七"];
-var content=" ";
 /**
  * getData方法
  * 读取id为source的列表，获取其中城市名字及城市对应的空气质量
@@ -34,13 +33,12 @@ var content=" ";
 function getData() {
   var name=document.getElementById("source").getElementsByTagName("li"),
       number=document.getElementById("source").getElementsByTagName("b");
- 
-  for(var i=0;i<7;i++){
+ for(var i=0;i<7;i++){
          data[i]=[name[i].innerText.substring(0,2),number[i].innerHTML];
-  } /*使用了substring()方法截取字符串的前两个字，即城市名，如果存在城市名不是两个字，那么这个方法就不行了，因此可以用name[i].innerHTML.split("空气")[0]截取城市名(split()方法把字符串分割为字符串数组)*/
-  return data;
+  }
+    return data;
 }
- /**
+/**
  * sortAqiData
  * 按空气质量对data进行从小到大的排序
  * 返回一个排序后的数组
@@ -49,7 +47,7 @@ function sortAqiData(data) {
   data.sort(function(a,b){
       return a[1]-b[1];
 })
-return data;
+  return data;
 }
 /**
  * render
@@ -57,20 +55,20 @@ return data;
  * 格式见ul中的注释的部分
  */
 function render(data) {
+  var content='';
   for(var j = 0;j<7;j++){
         content+="<li>第"+chinese[j]+"名："+data[j][0]+"空气质量：<b>"+data[j][1]+"</b></li>";
   }
 document.getElementById("resort").innerHTML=content;
 }
-  
-function btnHandle() {
-  var aqiData = getData();
-  aqiData = sortAqiData(aqiData);
-  render(aqiData);
+ function btnHandle() {
+ var aqiData = getData();
+  　 aqiData = sortAqiData(aqiData);
+  　 render(aqiData);
 }
 function init() {
 // 在这下面给sort-btn绑定一个点击事件，点击时触发btnHandle函数
-   document.getElementById("sort-btn").addEventListener("click",btnHandle);
+   document.getElementById("sort-btn").onclick=btnHandle;
 }
 init();
 </script>
