--- a/phase02/task16.html
+++ b/phase02/task16.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>IFE JavaScript Task 01</title>
+    <title>IFE Task 16——零基础JavaScript编码（四）</title>
     <style>
     input{
       margin:10px;
@@ -10,7 +10,6 @@
     </style>
     </head>
 <body>
-
   <div>
     <label>城市名称：<input id="aqi-city-input" type="text"></label><br>
     <label>空气质量指数：<input id="aqi-value-input" type="text"></label><br>
@@ -29,6 +28,80 @@
     </tr>
    -->
   </table>
-<script src="task16.js"></script>
+  
+  
+<script>
+ /**
+ * aqiData，存储用户输入的空气指数数据
+ * 示例格式：
+ * aqiData = {
+ *    "北京": 90,
+ *    "上海": 40
+ * };
+ */
+var aqiData={};
+var city_re=/^[\u4e00-\u9fa5a-zA-Z]+$/,   //验证城市名
+    num_re=/[0-9]+/;    //验证空气质量指数
+//字符串去空格
+function trim(str){
+	return str.replace(/\s+/g,'');
+}
+/**
+ * 从用户输入中获取数据，向aqiData中增加一条数据
+ * 然后渲染aqi-list列表，增加新增的数据
+ */
+function addAqiData() {
+	var  city_blank=document.getElementById('aqi-city-input').value,
+	     num_blank=document.getElementById('aqi-value-input').value,
+	     city=trim(city_blank),
+	     num=trim(num_blank);
+	if(city.length==0||num.length==0){
+		alert("城市名和空气质量指数均不能为空");
+	}
+	else if(!city_re.test(city)){
+		alert("请输入正确的城市名");
+	}
+	else if(!num_re.test(num)){
+		alert("请输入正确的空气质量指数（只能为整数）");
+	} 
+	else aqiData[city]=num;
+}
+/**
+ * 渲染aqi-table表格
+ */ 
+ function renderAqiList() {
+	var result="<tr><td>城市</td><td>空气质量</td><td>操作</td></tr>";
+ 	for(city in aqiData){
+        result+='<tr><td>'+city+'</td><td>'+aqiData[city]+'</td><td><button>删除</button></td></tr>';
+ 	}
+    document.getElementById("aqi-table").innerHTML=result;
+}
+/**
+ * 点击add-btn时的处理逻辑
+ * 获取用户输入，更新数据，并进行页面呈现的更新
+ */
+function addBtnHandle() {
+  addAqiData();
+  renderAqiList();
+}
+/**
+ * 点击各个删除按钮的时候的处理逻辑
+ * 获取哪个城市数据被删，删除数据，更新表格显示
+ */
+function delBtnHandle(t) {
+  var city=t.target.parentNode.parentNode.firstChild.innerHTML;
+  delete aqiData[city];
+  renderAqiList();
+}
+function init() {
+  // 在这下面给add-btn绑定一个点击事件，点击时触发addBtnHandle函数
+  var add=document.getElementById("add-btn");
+	  add.onclick=addBtnHandle;	
+  // 想办法给aqi-table中的所有删除按钮绑定事件，触发delBtnHandle函数
+  var table=document.getElementById("aqi-table");
+      table.addEventListener("click",delBtnHandle);
+}
+init();
+</script>
 </body>
 </html>
