--- a/phase02/task17/task17.html
+++ b/phase02/task17/task17.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>IFE JavaScript Task 17</title>
+    <title>IFE Task 17——零基础JavaScript编码（五）</title>
     <style>
     #aqi-chart-wrap{
       list-style: none;
@@ -39,5 +39,4 @@
   </div>
 <script src="task17.js"> </script>
 </body>
-
 </html>
