--- a/phase02/task16/task16.html
+++ b/phase02/task16/task16.html
@@ -1,14 +1,22 @@
-<!DOCTYPE html>
+<!DOCTYPE>
 <html>
   <head>
     <meta charset="utf-8">
     <title>IFE Task 16——零基础JavaScript编码（四）</title>
     <style>
-    input{
-      margin:10px;
-    }
+      input{
+        margin:20px;
+      }
+      table{
+        border-collapse:collapse;
+      }
+
+      td{
+        border:1px solid #ccc;
+        padding:15px;
+      }
     </style>
-    </head>
+  </head>
 <body>
   <div>
     <label>城市名称：<input id="aqi-city-input" type="text"></label><br>
@@ -28,10 +36,8 @@
     </tr>
    -->
   </table>
-  
-  
 <script>
- /**
+/**
  * aqiData，存储用户输入的空气指数数据
  * 示例格式：
  * aqiData = {
@@ -39,42 +45,34 @@
  *    "上海": 40
  * };
  */
-var aqiData={};
-var city_re=/^[\u4e00-\u9fa5a-zA-Z]+$/,   //验证城市名
-    num_re=/[0-9]+/;    //验证空气质量指数
-//字符串去空格
-function trim(str){
-	return str.replace(/\s+/g,'');
-}
-/**
- * 从用户输入中获取数据，向aqiData中增加一条数据
+var aqiData = {};
+ /* 从用户输入中获取数据，向aqiData中增加一条数据
  * 然后渲染aqi-list列表，增加新增的数据
  */
 function addAqiData() {
-	var  cityInput=document.getElementById('aqi-city-input').value,
-	     numInput=document.getElementById('aqi-value-input').value,
-	     city=trim(cityInput),
-	     num=trim(numInput);
-	if(city.length==0||num.length==0){
-		alert("城市名和空气质量指数均不能为空");
-	}
-	else if(!city_re.test(city)){
-		alert("请输入正确的城市名");
-	}
-	else if(!num_re.test(num)){
-		alert("请输入正确的空气质量指数（只能为整数）");
-	} 
-	else aqiData[city]=num;
+　　var city=document.getElementById("aqi-city-input").value.trim();       //去掉空格的城市名
+　　var number=document.getElementById("aqi-value-input").value.trim();    //去掉空格的空气质量指数
+    　　if(!(/^[\u4e00-\u9fa5_a-zA-Z]+$/.test(city))){          //验证城市名是否合规
+         　alert("城市名必须是中文或英文！");
+       　　return;
+    　　}
+    　　if(!(/^-?[1-9]\d*$/.test(number))){                    //验证空气质量指数是否合规
+          　alert("空气质量指数必须为整数！");
+       　　 return;
+   　　 }
+    　　else{
+      　　 return  aqiData[city]=number;
+   　　 }
 }
 /**
  * 渲染aqi-table表格
- */ 
- function renderAqiList() {
-	var result="<tr><td>城市</td><td>空气质量</td><td>操作</td></tr>";
- 	for(city in aqiData){
-        result+='<tr><td>'+city+'</td><td>'+aqiData[city]+'</td><td><button>删除</button></td></tr>';
- 	}
-    document.getElementById("aqi-table").innerHTML=result;
+ */
+function renderAqiList() {
+　　var content="<tr><td>城市</td><td>空气质量</td><td>操作</td></tr>";
+　　for( var city in aqiData){
+        content+="<tr><td>"+city+"</td><td>"+aqiData[city]+"</td><td><button>删除</button></td></tr>";
+    }
+    document.getElementById("aqi-table").innerHTML=city ? content:" ";  //如果删除所有数据（即city不存在），那么content为“ ”，表头也会被删除掉
 }
 /**
  * 点击add-btn时的处理逻辑
@@ -95,11 +93,12 @@ function delBtnHandle(t) {
 }
 function init() {
   // 在这下面给add-btn绑定一个点击事件，点击时触发addBtnHandle函数
-      document.getElementById("add-btn").addEventListener("click",addBtnHandle);	
+      document.getElementById("add-btn").addEventListener("click",addBtnHandle);  
   // 想办法给aqi-table中的所有删除按钮绑定事件，触发delBtnHandle函数
       document.getElementById("aqi-table").addEventListener("click",delBtnHandle);
 }
 init();
+
 </script>
 </body>
 </html>
