--- a/phase01/task12.html
+++ b/phase01/task12.html
@@ -88,16 +88,16 @@
       line-height: 30px;
       text-align: center;
     }
-    .tag1:target + .pics{
+    .tag1:target{
       left: 0;
       animation: .1s 1;
     }
-    .tag2:target + .pics{
-      left:-300px; 
+    .tag2:target{
+      left:0; 
       animation: .1s 1;  
     }
-    .tag3:target + .pics{
-      left: -600px;
+    .tag3:target{
+      left:0;
       animation: .1s 1;      
     }
     </style>
