--- a/phase02/task15/task15.html
+++ b/phase02/task15/task15.html
@@ -40,12 +40,12 @@ function getData() {
 }
 /**
  * sortAqiData
- * 按空气质量对data进行从小到大的排序
+ * 按空气质量对data进行从大到小的排序
  * 返回一个排序后的数组
  */
 function sortAqiData(data) {
   data.sort(function(a,b){
-      return a[1]-b[1];
+      return b[1]-a[1];
 })
   return data;
 }
