--- a/phase02/task15/task15.html
+++ b/phase02/task15/task15.html
@@ -40,7 +40,7 @@ function getData() {
 }
 /**
  * sortAqiData
- * 按空气质量对data进行从大到小的排序
+ * 按空气质量对data进行从大到小排序
  * 返回一个排序后的数组
  */
 function sortAqiData(data) {
