--- a/phase02/task21/task21.html
+++ b/phase02/task21/task21.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>task18</title>
+	<title>Task21-基础JavaScript练习（四）</title>
 	<style>
 	ul{
 		list-style: none;
