Update and rename phase01/task02.html to phase01/task02/task02.html

--- a/phase01/task02/task02.html
+++ b/phase01/task02/task02.html
@@ -2,7 +2,7 @@
 <html >
 <head>
     <meta charset="UTF-8"/>
-    <title>阶段一任务二</title>
+    <title>Task02</title>
     <link href="style2.css"rel="stylesheet">
 </head>
 <body>
