Update and rename phase01/task04.html to phase01/task04/task04.html

--- a/phase01/task04/task04.html
+++ b/phase01/task04/task04.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>阶段一任务四</title>
+    <title>Task04</title>
     <link rel="stylesheet"href="style4.css"/>
 </head>
 <body>
