--- a/phase01/task10/task10.html
+++ b/phase01/task10/task10.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>阶段一任务十</title>
+    <title>Task10</title>
     <link rel="stylesheet"href="style10.css"/>  
 </head>
 <body>
