--- a/phase01/task06/task06.html
+++ b/phase01/task06/task06.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>前端攻城狮队</title>
+    <title>Task06</title>
     <link href="style6.css"rel="stylesheet">
 </head>
 <body>
