--- a/phase01/task01/task01.html
+++ b/phase01/task01/task01.html
@@ -125,8 +125,8 @@
             <span>密码请为6-16位英文数字</span><br/>
             
             <span>性别</span>
-            <input type="radio"name="sex"value="man"checked="checked"id="man"/><label id="man">man</lable>
-            <input type="radio"name="sex"value="women"id="woman"/><label id="woman">woman</lable>
+            <input type="radio"name="sex"value="man"checked="checked"id="man"/><label id="man">man</label>
+            <input type="radio"name="sex"value="women"id="woman"/><label id="woman">woman</label>
                 	
             <span>城市</span>
                 <select name="city">
@@ -135,9 +135,9 @@
                 	<option>魔都</option>
             	  </select> 
             <span>爱好</span>
-              <input type="checkbox"name="lol"id="lol"/><label id="lol">LOL</lable>
-              <input type="checkbox"name="dota"id="dota"/><label id="dota">DOTA</lable>
-              <input type="checkbox"name="cs"id="cs"/><label id="cs">CS</lable>
+              <input type="checkbox"name="lol"id="lol"/><label id="lol">LOL </label>
+              <input type="checkbox"name="dota"id="dota"/><label id="dota">DOTA</label>
+              <input type="checkbox"name="cs"id="cs"/><label id="cs">CS</label>
             <label for="text">个人描述</label>
             	<textarea name="message"id="text">这是一个多行输入框，输入您的个人描述</textarea>
             	<input type="submit"name="submit"value="确认提交"/>
