--- a/phase01/task01/task01.html
+++ b/phase01/task01/task01.html
@@ -2,7 +2,7 @@
 <html >
 <head>
     <meta charset="UTF-8"/>
-    <title>Task01</title>
+    <title>Task01-零基础HTML编码</title>
 </head>
 <body>
     <header>
@@ -114,7 +114,7 @@
         </hgroup>
    	    <form>
    	        <label for="email">请输入邮箱地址</label>
-   	        <input type="text"name="email"value="这是一个文本输入框"id="email"/><br/>
+   	        <input type="text"name="email" placeholder="这是一个文本输入框"id="email"/><br/>
    	        <span>邮箱地址请按要求格式输入</span><br/>
    	        
    	        <label for="pw1">请输入密码</label>
