--- a/phase01/task05/task05.html
+++ b/phase01/task05/task05.html
@@ -130,12 +130,12 @@
    	 <h4>这里以后是一个侧栏，这是侧栏的标题</h4>
    	 <form>
    	      <span class="form-title">请输入邮箱地址</span>
-   	      <input type="text"name="email"value="这是一个文本输入框"/><br/>
+   	      <input type="text"name="email"placeholder="这是一个文本输入框"/><br/>
    	      <span class="form-remark">邮箱地址请按要求格式输入</span>
    	      <span class="form-title">请输入密码</span>
-   	      <input type="password"name="password"value="这是一个文本输入框"/><br/>
+   	      <input type="password"name="password" placeholder="这是一个文本输入框"/><br/>
           <span class="form-title">请重复输入密码</span>
-          <input type="password"name="password"value="这是一个文本输入框"/><br/>
+          <input type="password"name="password"placeholder="这是一个文本输入框"/><br/>
            
           <span class="form-remark">密码请为6-16位英文数字</span>
           <span class="form-title">性别</span>
