--- a/phase02/task22/task22.html
+++ b/phase02/task22/task22.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>IFE JavaScript Task 22</title>
+    <title>Task 22-JavaScript和树（一）</title>
     <style>
 		div{
     		display: inline-block;
