--- a/phase02/task23/task23.html
+++ b/phase02/task23/task23.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>IFE JavaScript Task 23</title>
+    <title>Task 23-JavaScript和树（二）</title>
     <style>
 		div{
     		display: inline-block;
