Update and rename phase02/task24.html to phase02/task24/task24.html

--- a/phase02/task24/task24.html
+++ b/phase02/task24/task24.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>IFE JavaScript Task 24</title>
+    <title>Task 24-JavaScript和树（三）</title>
     <style>
 		div{
     		display: inline-block;
