--- a/phase02/task30/task30.html
+++ b/phase02/task30/task30.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>IFE JavaScript Task 30</title>
+    <title>Task 30-表单（二）多个表单项的动态校验</title>
     <style>
     form{
     	margin:auto;
