Update and rename phase02/task31-1.html to phase02/task31/task31-1.html

--- a/phase02/task31/task31-1.html
+++ b/phase02/task31/task31-1.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>IFE JavaScript Task 31</title>
+    <title>Task 31-表单（三）联动</title>
     <style>
     form{
         margin:auto;
