Update and rename phase02/task32.html to phase02/task32/task32.html

--- a/phase02/task32/task32.html
+++ b/phase02/task32/task32.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>IFE JavaScript Task 32</title>
+    <title>Task 32-表单（四）实现表单自动生成工厂</title>
     <style>
    	form{
     	margin:auto;
