Update and rename phase02/task34-1.html to phase02/task34/task34-1.html

--- a/phase02/task34/task34-1.html
+++ b/phase02/task34/task34-1.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>IFE Task 34——听指令的小方块（二）</title>
+    <title>Task 34-听指令的小方块（二）</title>
     <style>
     table{
     	border-spacing: 0;
