--- a/phase01/task07/task07.html
+++ b/phase01/task07/task07.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Task07-实现常见的技术产品官网的页面架构及样式布局</title>
+	<title>Task7-实现常见的技术产品官网的页面架构及样式布局</title>
 	<link rel='stylesheet' href='style.css'/>
 </head>
 <body>
@@ -172,11 +172,12 @@
 			<a href='#'><img src='img/qq.jpg'></a>
 			<a href='#'><img src='img/weibo.jpg'></a>
 			<a href='#'><img src='img/facebook.jpg'></a>
-			<a href='#'><img src='img/boll.jpg'></a>
+			<a href='#'><img src='img/ball.jpg'></a>
 		</div>
-		<div>
-			<span>@2016新世界</span>
-			<span>Back to top</span>
+		<div class='footerBot'>
+			<span class='footerLeft'>@2016新世界</span>
+			<a href='#'><span class='footerRight'>Back to top</span></a>
 		</div>
+	</footer>
 </body>
 </html>
