--- a/phase01/task07/task07.html
+++ b/phase01/task07/task07.html
@@ -60,20 +60,27 @@
 				<span class='underline'>——<span>
 				<p>每个城市的有不同的活动信息，请自主查询您所需要了解的城市</p>
 				<form class='form1'>
-					<select>
-						<option value='china' checked>中国</option>
-					</select>
-					<select autofocus>
-						<option value='beijing' checked>北京市</option>
-						<option value='tianjin'>天津市</option>
-						<option value='hebei'>河北省</option>
-						<option value='shanxi'>陕西省</option>
-						<option value='neimenggu'>内蒙古自治区</option>
-						<option value='liaoning'>辽宁省</option>
-					</select>
-					<select>
-						<option value='chengshi' checked>城市</option>
-					</select>
+					<span class='select1'>
+						<select>
+							<option value='china' selected>中国</option>
+							<option value='americ'>美国</option>
+						</select>
+					</span>
+					<span class='select2'>
+						<select>
+							<option value='beijing'>北京市</option>
+							<option value='tianjin'>天津市</option>
+							<option value='hebei'>河北省</option>
+							<option value='shanxi'>陕西省</option>
+							<option value='neimenggu'>内蒙古自治区</option>
+							<option value='liaoning'>辽宁省</option>
+						</select>
+					</span>
+					<span class='select3'>
+						<select>
+							<option value='chengshi' selected>城市</option>
+						</select>
+					</span>
 					<button class='search'>搜素</button>
 				</form>
 			</div>
@@ -128,6 +135,7 @@
 				</div>
 			</div>
 			<div class='bottom2'>
+				<img src='img/bottom2.jpg'>
 				<div class='bottom2Cont'>
 					<p>新时代<br>
 					关于爱生活的我们</p>
@@ -167,8 +175,7 @@
 		<div class='footerCont'>
 			<h2>联系我们</h2>
 			<p>为了更好的获取我们最新产品资讯，您可以留下您的电子邮箱快速订阅我们的产品资讯<br>也可以通过以下任何方式关注我们动态</p>
-			<input type='text' value='someone@email.com'>
-			<button class='btn5'>提 交</button><br>
+			<input type='text' value='someone@email.com'><button class='btn5'>提 交</button><br>
 			<a href='#'><img src='img/qq.jpg'></a>
 			<a href='#'><img src='img/weibo.jpg'></a>
 			<a href='#'><img src='img/facebook.jpg'></a>
