--- a/phase01/task07/task07.html
+++ b/phase01/task07/task07.html
@@ -59,30 +59,20 @@
 				<h3>查找新世界城市活动信息</h3>
 				<span class='underline'>——<span>
 				<p>每个城市的有不同的活动信息，请自主查询您所需要了解的城市</p>
-				<form class='form1'>
-					<span class='select1'>
-						<select>
-							<option value='china' selected>中国</option>
-							<option value='americ'>美国</option>
-						</select>
-					</span>
-					<span class='select2'>
-						<select>
-							<option value='beijing'>北京市</option>
-							<option value='tianjin'>天津市</option>
-							<option value='hebei'>河北省</option>
-							<option value='shanxi'>陕西省</option>
-							<option value='neimenggu'>内蒙古自治区</option>
-							<option value='liaoning'>辽宁省</option>
-						</select>
-					</span>
-					<span class='select3'>
-						<select>
-							<option value='chengshi' selected>城市</option>
-						</select>
-					</span>
+				<div class='form1'>
+					<input type='text' class='nation' placeholder='中国'>
+					<input type='text' class='province' placeholder='省份'>
+						<ul class='proList'>
+							<li>北京市</li>
+							<li>天津市</li>
+							<li>河北省</li>
+							<li>陕西省</li>
+							<li>内蒙古自治区</li>
+							<li>辽宁省</li>
+						</ul>
+					<input type='text' class='city' placeholder='城市'>
 					<button class='search'>搜素</button>
-				</form>
+				</div>
 			</div>
 		</div>
 		<div class='section23'>
